Added new plugins and mdx support

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,6 +3,10 @@ header h1 {
   font-size: var(--font-size);
 }
 
+.header-content {
+  width: 460px;
+}
+
 header p {
   color: var(--color-grey);
 }
