--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,24 +3,27 @@
 }
 
 :root {
-  --font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
-
   --color-black: #000;
   --color-slighty-black: #191919;
+  --color-code-black: #1b1b1b;
   --color-white: #fff;
   --color-grey: #c4c4c4;
   --color-blue: #2196f3;
   --color-yellow: #f7ac1d;
   --color-orange: tomato;
+  --color-light-violet: #a7b9f1;
 
+  --font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  --font-family-coding: 'Dank Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   --font-size: 16px;
+  --font-size-md: 14px;
   --font-weight: 500;
   --line-height: 1.6;
 
-  --transition: all 0.2s linear;
-
   --grid-width: 920px;
+
+  --transition: all 0.2s linear;
 }
 
 html {
@@ -53,6 +56,14 @@ a:hover,
 a:focus {
   background-color: var(--color-slighty-black);
   transition: var(--transition);
+}
+
+time {
+  font-size: var(--font-size-md);
+}
+
+ul {
+  line-height: 2.2;
 }
 
 @media (prefers-color-scheme: dark) {
