--- a/src/styles/newsletter.css
+++ b/src/styles/newsletter.css
@@ -88,16 +88,12 @@
   opacity: 0.9;
 }
 
-.newsletter-container input[type='submit'].email-address {
+.newsletter-container .email-address {
   width: 100%;
-  border-radius: 6px;
-  border: 1px solid var(--color-secondary-color-newsletter);
+  border-radius: 4px;
+  border: 1px solid;
   outline: none;
   font-size: var(--font-size);
-}
-
-.newsletter-container input[type='submit'].email-address:focus {
-  border-color: var(--color-secondary-color-newsletter);
 }
 
 .newsletter-container span {
