--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -30,12 +30,8 @@
   background-color: var(--color-slighty-black);
   border-radius: 6px;
   position: relative;
-  max-height: 250px;
-  min-height: 250px;
-}
-
-.post h3 {
-  color: var(--color-yellow);
+  max-height: 205px;
+  min-height: 205px;
 }
 
 .post svg {
@@ -56,11 +52,14 @@
 .post h3 {
   padding: 0;
   margin: 0 0 5px;
+  padding-right: 15px;
+  color: var(--color-yellow);
 }
 
 .post p {
   margin-bottom: 0;
   color: var(--color-grey);
+  font-weight: 400;
 }
 
 .post a:hover {
