--- a/src/styles/book.css
+++ b/src/styles/book.css
@@ -76,3 +76,46 @@ section {
 p {
   color: var(--color-grey);
 }
+
+@media all and (max-width: 960px) and (min-width: 641px) {
+  .book-header {
+    grid-template-columns: 1fr;
+  }
+
+  .book-header > img {
+    max-width: 430px;
+    order: -1;
+    margin: 0 auto;
+  }
+}
+
+@media all and (max-width: 640px) {
+  .book-header,
+  .faq-questions {
+    grid-template-columns: 1fr;
+  }
+
+  .book-header > img {
+    max-width: 320px;
+    order: -1;
+    margin: 0 auto;
+  }
+
+  .book-header h2 {
+    max-width: 320px;
+  }
+
+  .header-actions {
+    display: grid;
+  }
+
+  .download {
+    margin: 0;
+    margin-top: 5px;
+  }
+
+  .gumroad-button {
+    max-width: 200px;
+    margin-bottom: 5px;
+  }
+}
