--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,3 +73,21 @@ ul,
 ol {
   line-height: 2.2;
 }
+
+@media all and (max-width: 960px) and (min-width: 761px) {
+  :root {
+    --grid-width: 720px;
+  }
+}
+
+@media all and (max-width: 760px) and (min-width: 641px) {
+  :root {
+    --grid-width: 600px;
+  }
+}
+
+@media all and (max-width: 640px) {
+  :root {
+    --grid-width: calc(100% - 40px);
+  }
+}
