--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -37,8 +37,7 @@
   background-color: var(--color-slighty-black);
   border-radius: 6px;
   position: relative;
-  max-height: 205px;
-  min-height: 205px;
+  height: 205px;
 }
 
 .posts .post h3:not::after {
@@ -87,7 +86,7 @@
 }
 
 .post-bg-placeholder {
-  min-height: 270px;
+  height: 270px;
   display: block;
 }
 
@@ -101,4 +100,46 @@
   border-radius: 50%;
   background-color: #e4e4e4;
   padding: 4px;
+}
+
+@media all and (max-width: 960px) and (min-width: 761px) {
+  .posts {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .post {
+    height: 185px;
+  }
+
+  .pet-projects.posts .post-bg-placeholder {
+    height: 250px;
+  }
+}
+
+@media all and (max-width: 760px) and (min-width: 641px) {
+  .posts {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .post {
+    height: auto;
+  }
+
+  .pet-projects.posts .post-bg-placeholder {
+    height: auto;
+  }
+}
+
+@media all and (max-width: 640px) {
+  .posts {
+    grid-template-columns: 1fr;
+  }
+
+  .post {
+    height: auto;
+  }
+
+  .pet-projects.posts .post-bg-placeholder {
+    height: auto;
+  }
 }
