--- a/src/styles/newsletter.css
+++ b/src/styles/newsletter.css
@@ -103,78 +103,53 @@
   color: var(--color-bright-blue);
 }
 
-/* @media all and (max-width: 720px) {
+@media all and (max-width: 760px) and (min-width: 640px) {
   .newsletter-container {
-    flex-direction: column;
-    height: 100% !important;
-    padding: 20px !important;
-    align-items: center;
-    text-align: center;
-    width: 460px;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    display: grid;
+    padding: 15px;
+  }
 
-    .newsletter-content {
-      width: 100%;
-      margin-top: -10px;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-    }
+  .newsletter-container form {
+    margin-top: -7px;
+  }
 
-    .newsletter-spam {
-      margin-top: 0;
-    }
+  .newsletter-container .email-address {
+    align-self: flex-end;
+  }
 
-    .newsletter-title {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-    }
+  .newsletter-container .submit-btn {
+    margin-left: 20px;
+  }
 
-    .email-address {
-      width: 100%;
-      max-width: 320px;
-    }
-
-    form {
-      width: 100%;
-      padding: 15px 0 10px;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-    }
-
-    input,
-    input[type='submit'] {
-      height: 40px;
-      padding: 0 10px;
-      font-size: 14px;
-    }
-
-    h4 + p {
-      margin-right: 0;
-    }
-
-    input[type='submit'] {
-      width: 320px;
-      align-self: flex-start;
-      margin: 20px auto 10px;
-    }
-
-    .newsletter-confirmation {
-      margin-bottom: 0;
-      margin-top: -5px;
-    }
+  .newsletter-spam {
+    margin-top: 28px;
   }
 }
 
-@media all and (max-width: 470px) {
+@media all and (max-width: 640px) {
   .newsletter-container {
-    width: 90%;
-    margin: 0 auto;
-
-    input[type='submit'] {
-      width: 100%;
-    }
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 15px;
   }
-} */
+
+  .newsletter-container form {
+    margin-bottom: 10px;
+    width: 100%;
+  }
+
+  .newsletter-container p {
+    margin-bottom: 20px;
+  }
+
+  .newsletter-spam,
+  .newsletter-content {
+    margin-top: 0;
+  }
+
+  .newsletter-container {
+    height: auto;
+  }
+}
