--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -42,7 +42,7 @@
 
 .posts .post h3:not::after {
   display: inline-block;
-  content: '→';
+  content: "→";
   position: relative;
   left: 6px;
   color: var(--color-grey);
@@ -71,13 +71,16 @@
   padding: 0;
   margin: 0 0 5px;
   padding-right: 15px;
-  color: var(--color-yellow);
 }
 
 .post p {
   margin-bottom: 0;
-  color: var(--color-grey);
   font-weight: 400;
+}
+
+.post p,
+.post time {
+  color: var(--color-grey);
 }
 
 .post a:hover {
