--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,10 +16,11 @@
   --color-dull-yellow: #ffd392;
   --color-maroon: #ee696b;
 
-  --font-family: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
-  --font-family-coding: 'Dank Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  --font-family-book: 'futura', sans-serif;
+  --font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --font-family-coding: "Dank Mono", Consolas, Monaco, "Andale Mono",
+    "Ubuntu Mono", monospace;
+  --font-family-book: "futura", sans-serif;
   --font-size: 16px;
   --font-size-lg: 20px;
   --font-size-llg: 38px;
@@ -74,6 +75,12 @@ ol {
   line-height: 2.2;
 }
 
+.grid {
+  max-width: var(--grid-width);
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 @media all and (max-width: 960px) and (min-width: 761px) {
   :root {
     --grid-width: 720px;
@@ -89,5 +96,9 @@ ol {
 @media all and (max-width: 640px) {
   :root {
     --grid-width: calc(100% - 40px);
+  }
+
+  .grid {
+    padding: 0 10px;
   }
 }
