--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,9 +1,3 @@
-.grid {
-  max-width: var(--grid-width);
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .layout {
   margin-top: 40px;
 }
@@ -12,15 +6,7 @@
   color: var(--color-yellow);
 }
 
-.gatsby-resp-image-wrapper {
-  margin: 30px 0;
-}
-
-.gatsby-resp-image-wrapper .gatsby-resp-image-link {
-  height: inherit;
-}
-
-.posts {
+.cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-top: 20px;
@@ -28,11 +14,7 @@
   grid-gap: 30px;
 }
 
-.posts:last-child {
-  margin-bottom: 60px;
-}
-
-.post {
+.card {
   padding: 15px;
   background-color: var(--color-slighty-black);
   border-radius: 6px;
@@ -40,7 +22,7 @@
   height: 205px;
 }
 
-.posts .post h3:not::after {
+.cards .card h3:not::after {
   display: inline-block;
   content: "→";
   position: relative;
@@ -48,7 +30,7 @@
   color: var(--color-grey);
 }
 
-.post svg {
+.card svg {
   position: absolute;
   right: 10px;
   width: 30px;
@@ -57,63 +39,46 @@
   fill: var(--color-blue);
 }
 
-.tags {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 8px;
-  text-align: center;
-}
-
-.tags span {
-  background-color: var(--color-code-black);
-  padding: 5px;
-  display: inline-block;
-  font-size: 11px;
-  border-radius: 8px;
-  text-transform: uppercase;
-}
-
-.posts a {
+.cards a {
   padding: 0;
   height: auto;
   color: var(--color-white);
 }
 
-.posts > a:hover {
+.cards > a:hover {
   opacity: 0.9;
 }
 
-.post h3 {
+.card h3 {
   padding: 0;
   margin: 0 0 5px;
   padding-right: 15px;
 }
 
-.post p {
+.card p {
   margin-bottom: 0;
   font-weight: 400;
 }
 
-.post p,
-.post time {
+.card p,
+.card time {
   color: var(--color-grey);
 }
 
-.post a:hover {
+.card a:hover {
   background-color: transparent;
   color: var(--color-yellow);
 }
 
-.post-bg-placeholder {
-  height: 270px;
-  display: block;
+.projects .card {
+  height: 255px;
 }
 
-.post-bg-placeholder h3 {
+.projects .card h3 {
   margin-top: 10px;
 }
 
-.post-bg-placeholder img {
+.projects .card img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -121,44 +86,52 @@
   padding: 4px;
 }
 
+.dashboard .card {
+  height: 100px;
+}
+
+.dashboard .card h4 {
+  margin-top: 10px;
+}
+
 @media all and (max-width: 960px) and (min-width: 761px) {
-  .posts {
+  .cards {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .post {
+  .card {
     height: 185px;
   }
 
-  .pet-projects.posts .post-bg-placeholder {
+  .projects .card {
     height: 250px;
   }
 }
 
 @media all and (max-width: 760px) and (min-width: 641px) {
-  .posts {
+  .cards {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .post {
+  .card {
     height: auto;
   }
 
-  .pet-projects.posts .post-bg-placeholder {
+  .projects .card {
     height: auto;
   }
 }
 
 @media all and (max-width: 640px) {
-  .posts {
+  .cards {
     grid-template-columns: 1fr;
   }
 
-  .post {
+  .card {
     height: auto;
   }
 
-  .pet-projects.posts .post-bg-placeholder {
+  .projects .card {
     height: auto;
   }
 }
