--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -59,6 +59,10 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
+.all-posts .card {
+  padding: 15px;
+}
+
 .go-to {
   display: inline-block;
   line-height: 20px;
