--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -65,6 +65,14 @@
   height: 22px;
 }
 
+.dot {
+  font-size: calc(var(--font-size-xs) - 1px);
+  display: inline-block;
+  margin: 0 10px 0;
+  position: relative;
+  top: -1px;
+}
+
 @media all and (max-width: 640px) {
   .blog-post-details {
     grid-template-columns: repeat(2, 170px);
