--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -10,6 +10,7 @@
   list-style: none;
   min-width: 230px;
   justify-content: space-between;
+  padding-left: 15px;
 }
 
 .menu-content {
@@ -58,4 +59,25 @@
   display: flex;
   align-items: center;
   margin-left: -10px;
+}
+
+@media all and (max-width: 480px) {
+  .menu-list {
+    min-width: 200px;
+  }
+
+  .menu-list li a {
+    font-size: var(--font-size-sm);
+  }
+
+  .social {
+    grid-gap: 10px;
+  }
+
+  .menu .logo img {
+    max-width: 58px;
+    margin-top: 6px;
+    width: unset;
+    height: unset;
+  }
 }
