--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,7 @@ footer {
   justify-content: space-between;
   color: var(--color-grey);
   margin-top: 40px;
+  border-top: 1px solid var(--color-slighty-black);
 }
 
 footer > div {
