--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,7 +66,9 @@ a {
 
 a:hover,
 a:focus {
-  background-color: var(--color-slighty-black);
+  text-decoration: underline;
+  opacity: 0.9;
+  text-underline-offset: 4px;
 }
 
 h1,
